--- a/Random_Walk_Simulation.ipynb
+++ b/Random_Walk_Simulation.ipynb
@@ -217,7 +217,7 @@
         "pointer9 = ax.scatter([],[], c = 'navy', marker = 'v')\n",
         "pointer10 = ax.scatter([],[], c = 'dimgray', marker = 'o')\n",
         "\n",
-        "line, = ax.plot([],[],'blue')\n",
+        "line1, = ax.plot([],[],'blue')\n",
         "line2, = ax.plot([],[],'green')\n",
         "line3, = ax.plot([],[],'red')\n",
         "line4, = ax.plot([],[],'magenta')\n",
