--- a/Random_Walk_Simulation.ipynb
+++ b/Random_Walk_Simulation.ipynb
@@ -1,16 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Random Walk Simulation.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -218,7 +206,7 @@
         "pointer10 = ax.scatter([],[], c = 'dimgray', marker = 'o')\n",
         "\n",
         "line1, = ax.plot([],[],'blue')\n",
-        "line2, = ax.plot([],[],'green')\n",
+        "linex, = ax.plot([],[],'green')\n",
         "line3, = ax.plot([],[],'red')\n",
         "line4, = ax.plot([],[],'magenta')\n",
         "line5, = ax.plot([],[],'black')\n",
@@ -377,5 +365,17 @@
       "execution_count": 0,
       "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Random Walk Simulation.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
